# Polar-Science-Knowledge-Graph-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.ipynb  main.py  pyproject.toml  test_data.csv
.ipynb_checkpoints/: main-checkpoint.ipynb
data/cache/: globi_interactions.json  ncbi_taxonomy.json  worms_records.json
scripts/: query_neo4j.sh  run_demo.sh  stop_demo.sh
src/kg_public_demo/: cli.py  csv_utils.py  globi.py  http_utils.py  ncbi.py  neo4j_loader.py  pipeline.py  worms.py
src/kg_public_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
