[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-public-demo"
version = "0.1.0"
description = "Minimal public reproducibility demo for the PENGUIN KG onboarding workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "neo4j>=5.20,<6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
